model User {
  id                String        @id @default(uuid())
  name              String
  email             String        @unique
  emailVerified     Boolean       @default(false)
  image             String?
  gender            Gender
  phoneNumber       String?
  isVerified        Boolean       @default(false)
  avgRatingAsDriver Float         @default(0)
  cancellationCount Int           @default(0)
  accountStatus     AccountStatus @default(ACTIVE)
  isAdmin           Boolean       @default(false)
  isDeleted         Boolean       @default(false)
  deletedAt         DateTime?
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt

  sessions Session[]
  accounts Account[]
  vehicles Vehicle[]
  rides    Ride[]
  messages Message[]

  @@index([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  userId                String
  accountId             String
  providerId            String
  issuer                String
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime
  updatedAt             DateTime

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([issuer, accountId])
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}
